--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,13 @@
   <title>NatSorting</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">  
+  <style>
+    /* html, body { 
+      height: 100%;
+      background-color: rgb(232, 149, 60); 
+    } */
+  </style>
 </head>
 <body>
   <app-root></app-root>
